Colour changes made for branch 1

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 body{
     background-color: darkslategrey;
-    color:beige;
+    color:rgb(215, 215, 131);
     text-align: center;
 }
 main h1{
@@ -37,8 +37,8 @@ main h1{
     border-radius: 10%;
     box-shadow: 0 0 1rem rgb(75, 74, 74) ;
     font-size: 14vmin;
-    color: brown;
-    background-color: beige;
+    color: rgb(32, 8, 122);
+    background-color: rgb(194, 194, 128);
 }
 
 #reset{
@@ -49,8 +49,8 @@ main h1{
     font-family: monospace;
     border: none;
     border-radius: 0.5rem;
-    background-color: rgb(36, 36, 36);
-    color: beige;
+    background-color: rgb(50, 40, 40);
+    color: rgb(201, 201, 112);
 }
 
 #new-game{
@@ -61,11 +61,11 @@ main h1{
     font-family: monospace;
     border: none;
     border-radius: 0.5rem;
-    background-color: rgb(36, 36, 36);
-    color: beige;
+    background-color: rgb(53, 48, 48);
+    color: rgb(207, 207, 141);
 }
 #msg{
-    color: beige;
+    color: rgb(210, 210, 138);
     font-size: 8vmin;
 }
 .msgContainer{
